# minesweeper-solver

./: Cargo.toml
src/: bitset.rs  bitvec.rs  board.rs  csp.rs  game.rs  lib.rs  main.rs  search.rs  solution_set.rs  solver.rs  solver_struct.rs
src/game/: game2d.rs  mod.rs  precomputed_graph.rs
src/nn/: layers.rs  mod.rs
src/solution_set/: combinations_iter.rs  incremental.rs  mod.rs  sampling.rs  solution_counting.rs
src/solver/: csp.rs  mod.rs  solutionset.rs  solve.rs
src/solver2/: bitset.rs  mod.rs
src/solver3/: combinations.rs  mod.rs  tree_solver.rs
