[package]
name = "minesweeper2"
version = "0.1.0"
authors = ["Nathan Koppel <nathankoppel0@gmail.com>"]
edition = "2021"

# [lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]

rand = "0.9"
smallvec = { version = "1.15", features = ["union"] }
itertools = "0.14"
malachite = { version = "0.6", features = ["random"] }
